[gd_scene load_steps=4 format=3 uid="uid://ch5p0ajdyw2lx"]

[ext_resource type="Script" path="res://Views/card.gd" id="1_1x4t6"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_6grwy"]
size = Vector2(128, 128)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kupx6"]
size = Vector2(64, 64)

[node name="Card" type="TextureButton"]
texture_normal = SubResource("PlaceholderTexture2D_6grwy")
script = ExtResource("1_1x4t6")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(32, 32)
texture = SubResource("PlaceholderTexture2D_kupx6")

[node name="CardData" type="MarginContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CardData"]
layout_mode = 2
mouse_filter = 2

[node name="CardName" type="Label" parent="CardData/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Card Name"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
